...
            "state" : "translated",
            "value" : "L8: Max Range"
          }
        }
      }
    },
    "LinkGuard" : {

    },
    "LINKGUARD" : {
      "comment" : "The main title of the app.",
      "isCommentAutoGenerated" : true
    },
...
    },
    "確定" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
        }
      }
    },
    "確認" : {
      "localizations" : {
...
    },
    "通知" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Notifications"
          }
        }
      }
    },
    "通訊" : {
      "localizations" : {
...
